# SAPML

./: .envrc  Dockerfile-mpspdz  Makefile  README.md  artifact.ipynb
doe-suite/: .envrc
doe-suite-config/: pyproject.toml
mpc-consistency/: Cargo.toml  test.zsh  test_e2e.zsh  test_e2e_2pc.zsh  test_singleprover.zsh
mpc-consistency/mpc-net/: Cargo.toml  test.zsh
mpc-consistency/mpc-net/examples/: broadcast.rs
mpc-consistency/mpc-net/src/: lib.rs  multi.rs  two.rs
output/: aws_results_1747139309.csv  aws_results_1747141269.csv  aws_results_1747291666.csv  aws_results_1747291717.csv  aws_results_1747291727.csv  aws_results_1747293586.csv  aws_results_1747293610.csv  aws_results_1747294321.csv  aws_results_1747295750.csv  aws_results_1747297145.csv  aws_results_1747492037.csv  aws_results_1747492414.csv  aws_results_1747493520.csv  aws_results_1747559189.csv  docker_results_1748311103.csv  paper_results_1747061794.csv  paper_results_1747063264.csv  paper_results_1747063674.csv  paper_results_1747136598.csv  paper_results_1747136965.csv  paper_results_1747141292.csv  paper_results_1747211839.csv  paper_results_1747297238.csv  paper_results_1747491913.csv  paper_results_1747491947.csv  paper_results_1747491957.csv  paper_results_1747492284.csv  paper_results_1747570698.csv
script_utils/: audit_function_utils.py  config.py  consistency_cerebro.py  input_consistency.py  output_utils.py  timers.py
scripts/: accuracy.mpc  audit_fairness.mpc  audit_owner_knn.mpc  audit_owner_unlearn.mpc  audit_prediction_shap.mpc  audit_robustness.mpc  audit_rs.mpc  inference.mpc  (+4 more)
(+138 files in other folders)
