[package]
name = "mpc-net"
version = "0.1.0"
authors = ["Alex Ozdemir <aozdemir@hmc.edu>"]
edition = "2018"

[dependencies]
lazy_static = "1"
log = {version = "0.4"}
ark-std = { version = "0.4.0", features=["print-trace"]}
derivative = { version = "2.0", features = ["use_core"]}
rayon = "1.5.1"
[dev-dependencies]
structopt = { version = "0.3" }
env_logger = "0.8"

